<resources>
    <string name="app_name">Two Fragment</string>

    <string name="InfoTitle">User Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="Title">User Details</string>
    <string name="Email">Email Address</string>
    <string name="Phone">Mobile Number</string>
    <string name="name">Name</string>

    <string-array name="titles">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
        <item>Dr</item>
        <item>Master</item>
        <item>Miss</item>
        <item>Mx</item>
        <item>Misc</item>
        <item>Ind</item>
    </string-array>
    <string name="title_activity_display_info">DisplayInfo</string>
</resources>
